--- a/src/Sinedo/Views/Shared/Layout_Settings.cshtml
+++ b/src/Sinedo/Views/Shared/Layout_Settings.cshtml
@@ -19,6 +19,8 @@
 
     <meta name="theme-color" media="(prefers-color-scheme:dark)" content="#000000">
     <meta name="theme-color" media="(prefers-color-scheme:light)" content="#ffffff">
+
+    <script type="text/javascript" src="/scripts/app.js"></script>
 </head>
 
 <body>
@@ -56,11 +58,8 @@
             <div class="tabcontrol__statusbar">
             </div>
         </div>
-
-        <div style="height: 14px;">
-
-        </div>
     </main>
+    <script>Application.Settings.Main();</script>
 </body>
 
 </html>
